fix: word wrap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -150,7 +150,9 @@ nav {
 .notion-code-copy-button > svg {
   pointer-events: none;
 }
-
+.base-word-wrap {
+  overflow-wrap: anywhere;
+}
 .fireworks {
   position: fixed;
   left: 0;
